--- a/suggestions.html
+++ b/suggestions.html
@@ -1,28 +1,43 @@
 ---
 layout: page
 title: Suggestions
-subtitle: Recomendations and Suggestions
+subtitle: Read Suggestions
 permalink: /suggestions
 ---
 
-<h3>Deep Work</h3>
-<p><img src="https://images-na.ssl-images-amazon.com/images/I/51HsuPnTbrL._SX329_BO1,204,203,200_.jpg" class="books" alt="" /></p>
+These are some books that I loved read and get nice insights and ideas.
 
-<h3>The Algorithm Design Manual</h3>
-<p><img src="https://images-na.ssl-images-amazon.com/images/I/41s5pnqOlyL._SX357_BO1,204,203,200_.jpg" class="books" alt="" /></p>
+<section class="section">
+  <h4 class="title is-4">Deep Work</h4>
+  <img style="" src="https://images-na.ssl-images-amazon.com/images/I/51HsuPnTbrL._SX329_BO1,204,203,200_.jpg" alt="" width="150px" />
+</section>
 
-<h3>The Pragmatic Programmer</h3>
-<p><img src="https://images-na.ssl-images-amazon.com/images/I/41BKx1AxQWL._SX396_BO1,204,203,200_.jpg" class="books" alt="" /></p>
+<section class="section">
+  <h4 class="title is-4">The Algorithm Design Manual</h4>
+  <img src="https://images-na.ssl-images-amazon.com/images/I/41s5pnqOlyL._SX357_BO1,204,203,200_.jpg" alt="" width="150px" />
+</section>
 
-<h3>Clean Code</h3>
-<p><img src="https://images-na.ssl-images-amazon.com/images/I/41TINACY3hL._SX384_BO1,204,203,200_.jpg" class="books" alt="" /></p>
+<section class="section">
+  <h4 class="title is-4">The Pragmatic Programmer</h4>
+  <img src="https://images-na.ssl-images-amazon.com/images/I/41BKx1AxQWL._SX396_BO1,204,203,200_.jpg" class="books" alt="" width="150px" />
+</section>
 
-<h3>Structure and Interpretation of Computer Programs</h3>
-<p><img src="https://images-na.ssl-images-amazon.com/images/I/51H17R%2BbW8L._SX331_BO1,204,203,200_.jpg" class="books" alt="" /></p>
+<section class="section">
+  <h4 class="title is-4">Clean Code</h4>
+  <img src="https://images-na.ssl-images-amazon.com/images/I/41TINACY3hL._SX384_BO1,204,203,200_.jpg" class="books" alt="" width="150px" />
+</section>
 
-<h3>Concrete Mathematics</h3>
-<p><img src="https://images-na.ssl-images-amazon.com/images/I/61oqP3wQsiL._SX350_BO1,204,203,200_.jpg" class="books" alt="" /></p>
+<section class="section">
+  <h4 class="title is-4">Structure and Interpretation of Computer Programs</h4>
+  <img src="https://images-na.ssl-images-amazon.com/images/I/51H17R%2BbW8L._SX331_BO1,204,203,200_.jpg" class="books" alt="" width="150px" />
+</section>
 
-<h3>Introduction to Algorithms</h3>
-<p><img src="https://images-na.ssl-images-amazon.com/images/I/419HuM63sBL._SX319_BO1,204,203,200_.jpg" class="books" alt="" /></p>
-</div>
+<section class="section">
+  <h4 class="title is-4">Concrete Mathematics</h4>
+  <img src="https://images-na.ssl-images-amazon.com/images/I/61oqP3wQsiL._SX350_BO1,204,203,200_.jpg" class="books" alt="" width="150px" />
+</section>
+
+<section class="section">
+  <h4 class="title is-4">Introduction to Algorithms</h4>
+  <img src="https://images-na.ssl-images-amazon.com/images/I/419HuM63sBL._SX319_BO1,204,203,200_.jpg" class="books" alt="" width="150px" />
+</section>
