--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 layout: default
 ---
-<h1 class="site-title">Sant&#8217;Ana Blog</h1>
 
-<p><img src="/img/hackerman.png" class="banner" alt="" /></p>
+<div class="content is-medium">
+	<img src="https://arthistoryproject.com/site/assets/files/27965/joseph_wright_of_derby-a_philosopher_lecturing_on_the_orrery-1766-trivium-art-history-1.800x0.jpg" class="banner" alt="" width="480px" />
 
-<p>&#8220;People think that computer science is the art of geniuses but the actual reality is the opposite, just many people doing things that build on each other, like a wall of mini stones.&#8221;</p>
+	<p>&#8220;People think that computer science is the art of geniuses but the actual reality is the opposite, just many people doing things that build on each other, like a wall of mini stones.&#8221;</p>
 
-<p>- Donald Knuth</p>
+	<p>- Donald Knuth</p>
+</div>
